<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Skryaga</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amountLabel">Amount:</string>
    <string name="dailyAmountLabel">Daily:</string>
    <string name="spentTodayLabel">Spending today:</string>
    <string name="goalLabel">Goal:</string>
    <string name="exchangeLabel">Best rate:</string>
    <string name="restLabel">Rest for today:</string>
    <string name="refresh">Refresh</string>
    <string name="toolbarTitle">Skryaga</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="selectSalaryDate">Select salary date</string>
    <string name="selectPrepaidDate">Select prepaid date</string>
    <string name="secureModePreference">Secure mode</string>
    <string name="showDailySpendingTitle">Show daily spending</string>
    <string name="secureModePreferenceEnabled">Amount, goal and all income transaction values are partially hided</string>
    <string name="secureModePreferenceDisabled">Enable secure mode to partially hide your current amount and other secure data</string>
    <string name="showDailySpendingPreference">Show daily spending amount in day delimiter row</string>
    <string name="updated">Updated</string>
    <string name="needUpdated">You must update existing transactions to start use the application!</string>
    <string name="parsing">Parsing transactions</string>
    <string name="progressTitle">Please wait</string>
    <string name="updatePreference">Update exist messages</string>
    <string name="backupData">Create backup</string>
    <string name="restoreData">Restore backup</string>
    <string name="statisticsUpdating">Statistics is being updated</string>
    <string name="balanceUpdating">Balance is being updated</string>
    <string name="goalDialogTitle">Enter goal amount</string>
    <string name="rubles">р.</string>
    <string name="rateLabel">Rate:</string>
    <string name="error_loading_rates">Error loading</string>
    <string name="ussd_service_description">This service records pop ups sent by your mobile operator, and saves them in Skryaga App. It is absolutely safe to use.</string>
    <string name="undefined_balance">Undefined</string>
    <string name="masked_balance">****</string>
    <string name="dialog_balance_title">USSD Balance</string>
    <string name="dialog_balance_message">Do you really want to sent USSD request to update your balance?</string>
    <string name="dialog_balance_label">4 last numbers of card:</string>
    <string name="unknown_income_transaction">Income operation</string>
    <string name="acceptedCardTitle">Setup card number</string>
    <string name="acceptedCardSummary">The card number to be included to the Skryaga statistics</string>
    <string name="acceptedCardSummaryCurrent">Current value</string>



</resources>
