<?xml version="1.0" encoding="utf-8"?>

<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_info"
        android:layout_width="fill_parent"
        android:columnCount="2"
        android:rowCount="3"
        android:stretchColumns="0,1"
        style="@style/mainInfo">

    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amountLabel"
                    android:id="@+id/total_amount_label"
                    android:textIsSelectable="false"
                    style="@style/mainInfoTextLabel"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/total_amount_field"
                    android:layout_gravity="center"
                    style="@style/mainInfoText"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dailyAmountLabel"
                    android:id="@+id/daily_amount_label"
                    style="@style/mainInfoRightText"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/daily_amount_field"
                    style="@style/mainInfoText"/>
        </LinearLayout>
    </TableRow>

    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spentTodayLabel"
                    android:id="@+id/spent_amount_label"
                    style="@style/mainInfoTextLabel"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/spent_amount_field"
                    style="@style/mainInfoText"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goalLabel"
                    android:id="@+id/goal_amount_label"
                    style="@style/mainInfoRightText"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="600$"
                    android:id="@+id/goal_amount_field"
                    style="@style/mainInfoText"/>
        </LinearLayout>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restLabel"
                    android:id="@+id/rest_amount_label"
                    style="@style/mainInfoTextLabel"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/rest_amount_field"
                    style="@style/mainInfoText"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exchangeLabel"
                    android:id="@+id/exchange_amount_label"
                    style="@style/mainInfoRightText"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/exchange_amount_field"
                    style="@style/mainInfoText"/>
        </LinearLayout>
    </TableRow>
</TableLayout>